terraform/modules/security/main.tf
resource "aws_security_group" "frontend_sg" {
  name        = "${var.project_name}-frontend-sg"
  description = "Security group for frontend web server"
  vpc_id      = var.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    cidr_ipv4 = "0.0.0.0/0"
  }

  ingress {

    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_ipv4 = "0.0.0.0/0"

  }

  egress {

    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_ipv4 = "0.0.0.0/0"
  }

  tags = {
    Name = "${var.project_name}-frontend-sg"
  }
}



resource "aws_security_group" "backend_sg" {
  name        = "${var.project_name}-backend-sg"
  description = "Security group for backend application server"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.frontend_sg.id]
  }

  ingress {
    from_port       = 5000
    to_port         = 5000
    protocol        = "tcp"
    security_groups = [aws_security_group.frontend_sg.id]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_ipv4 = "0.0.0.0/0"
  }

  tags = {
    Name = "${var.project_name}-backend-sg"
  }
}






resource "aws_security_group" "database_sg" {
  name        = "${var.project_name}-database-sg"
  description = "Security group for MySQL database server"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.backend_sg.id]
  }

  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.backend_sg.id]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_ipv4 = "0.0.0.0/0"
  }

  tags = {
    Name = "${var.project_name}-database-sg"
  }
}
